--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
 
 
     //By 宇
-    <color name="divider_color">#D5D5D5</color>
+    <color name="divider_color">#E6E6E6</color>
     <string name="desc">分类来查看</string>
 
     <string-array name="language">
